--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -76,3 +76,5 @@ $color-text-screen-reader: $color-blue;
 $color-link: $color-black;
 $color-link-visited: $color-black;
 $color-link-hover: $color-black;
+$header-color-link: $color-white;
+$footer-color-link: $color-white;
