--- a/style.css
+++ b/style.css
@@ -1551,14 +1551,21 @@ textarea {
 
 /* line 5, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_footer.scss */
 .site-footer {
-  border-top: 3px solid black;
+  background: #666;
+  color: white;
+  padding-top: 1.5em;
 }
 
-/* line 9, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_footer.scss */
+/* line 10, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_footer.scss */
+.site-footer a {
+  color: #ffffff;
+}
+
+/* line 15, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_footer.scss */
 .credits,
 .site-info {
   text-align: center;
-  margin: 1.5em 0;
+  margin-bottom: 1.5em;
 }
 
 /* line 6, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/plugins/_jetpack.scss */
