Updated instagram color

--- a/style.css
+++ b/style.css
@@ -1434,7 +1434,7 @@ textarea {
 
 /* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-instagram:hover {
-  fill: #517fa4;
+  fill: #f77737;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
