--- a/assets/sass/utilities/variables/_colors.scss
+++ b/assets/sass/utilities/variables/_colors.scss
@@ -34,7 +34,7 @@ $color-whitesmoke: #f1f1f1;
 // Social Media Colors
 $color-facebook: #3b5998;
 $color-googleplus: #dd4b39;
-$color-instagram: #517fa4;
+$color-instagram: #f77737;
 $color-linkedin: #007bb6;
 $color-pinterest: #cb2027;
 $color-rss: #ff9900;
