--- a/style.css
+++ b/style.css
@@ -1379,185 +1379,185 @@ textarea {
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-facebook {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-facebook:hover {
   fill: #3b5998;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-facebook-square {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-facebook-square:hover {
   fill: #3b5998;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-googleplus {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-googleplus:hover {
   fill: #dd4b39;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-googleplus-square {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-googleplus-square:hover {
   fill: #dd4b39;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-instagram {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-instagram:hover {
   fill: #f77737;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-linkedin {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-linkedin:hover {
   fill: #007bb6;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-linkedin-square {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-linkedin-square:hover {
   fill: #007bb6;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-pinterest {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-pinterest:hover {
   fill: #cb2027;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-pinterest-square {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-pinterest-square:hover {
   fill: #cb2027;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-rss {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-rss:hover {
   fill: #ff9900;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-rss-square {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-rss-square:hover {
   fill: #ff9900;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-twitter {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-twitter:hover {
   fill: #00aced;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-twitter-square {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-twitter-square:hover {
   fill: #00aced;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-youtube {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-youtube:hover {
   fill: #bb0000;
 }
 
 /* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-youtube-square {
-  height: 3.75rem;
-  width: 3.75rem;
+  height: 1.875rem;
+  width: 1.875rem;
   fill: #fff;
 }
 
-/* line 26, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 27, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon .icon-youtube-square:hover {
   fill: #bb0000;
 }
 
-/* line 33, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+/* line 41, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
 .social-icons .social-icon:last-child {
   margin-right: 0;
 }
@@ -1792,6 +1792,66 @@ textarea {
   }/* line 41, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_header.scss */
   .site-branding {
     text-align: center;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-facebook {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-facebook-square {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-googleplus {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-googleplus-square {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-instagram {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-linkedin {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-linkedin-square {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-pinterest {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-pinterest-square {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-rss {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-rss-square {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-twitter {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-twitter-square {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-youtube {
+    height: 2.8125rem;
+    width: 2.8125rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-youtube-square {
+    height: 2.8125rem;
+    width: 2.8125rem;
   }/* line 137, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/plugins/_gravity-forms.scss */
   .gform_wrapper .gform_body .gform_fields .gfield select,
   .gform_wrapper.gf_browser_chrome .gform_body .gform_fields .gfield select {
@@ -1864,6 +1924,66 @@ textarea {
   .comments-area {
     max-width: 40rem;
     margin-bottom: 1.5em;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-facebook {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-facebook-square {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-googleplus {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-googleplus-square {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-instagram {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-linkedin {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-linkedin-square {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-pinterest {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-pinterest-square {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-rss {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-rss-square {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-twitter {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-twitter-square {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-youtube {
+    height: 3.75rem;
+    width: 3.75rem;
+  }/* line 21, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_icons.scss */
+  .social-icons .social-icon .icon-youtube-square {
+    height: 3.75rem;
+    width: 3.75rem;
   }
 }
 
