--- a/style.css
+++ b/style.css
@@ -881,7 +881,35 @@ a:hover, a:focus, a:active {
   float: none;
 }
 
+/* line 96, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+.main-navigation .menu-item-has-children {
+  margin-right: 3rem;
+}
+
 /* line 99, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+.main-navigation .menu-item-has-children > a:after {
+  height: 0;
+  width: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid white;
+  content: "";
+  position: absolute;
+  right: -1.375rem;
+  top: 1.625rem;
+}
+
+/* line 108, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+.main-navigation ul ul .menu-item-has-children > a :after {
+  height: 0;
+  width: 0;
+  border-bottom: 6px solid transparent;
+  border-right: 6px solid black;
+  border-top: 6px solid transparent;
+  content: "";
+}
+
+/* line 115, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu {
   margin: 0;
   padding: 0;
@@ -895,12 +923,13 @@ a:hover, a:focus, a:active {
   display: table;
 }
 
-/* line 102, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 118, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu li {
   margin: 0 1.5rem 0 0;
+  position: relative;
 }
 
-/* line 106, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 123, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu ul {
   margin: 0;
   padding: 0;
@@ -914,65 +943,99 @@ a:hover, a:focus, a:active {
   display: table;
 }
 
-/* line 112, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 129, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.menu-horizontal li {
   display: inline-block;
 }
 
-/* line 119, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 136, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.menu-vertical li {
   margin: 0;
 }
 
-/* line 123, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 140, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.menu-vertical a {
   border-bottom: 1px solid #cccccc;
   padding: 0.625rem;
 }
 
-/* line 132, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 149, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.dropdown ul {
   position: absolute;
-  top: 1.5rem;
-  left: -624.9375rem;
   background-color: #ffffff;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
   float: left;
-  padding: 0.5rem;
   z-index: 99999;
+  right: 0;
+  display: none;
+  border-bottom: 1px solid black;
 }
 
-/* line 142, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 158, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+.menu.dropdown ul:hover {
+  display: block;
+}
+
+/* line 163, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.dropdown ul ul {
-  left: -624.9375rem;
-  top: 0;
+  display: none;
+  left: auto;
+  right: 100%;
+  top: -1px;
 }
 
-/* line 150, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 169, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+.menu.dropdown ul ul:hover {
+  display: block;
+}
+
+/* line 175, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+.menu.dropdown ul li {
+  text-align: left;
+  width: 12.5rem;
+  padding: 0.625rem;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+  border-left: 1px solid black;
+  margin: 0;
+}
+
+/* line 184, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.dropdown ul li:hover > ul,
 .menu.dropdown ul li.focus > ul {
-  left: 100%;
+  display: block;
 }
 
-/* line 157, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 189, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+.menu.dropdown ul li.menu-item-has-children > a:after {
+  height: 0;
+  width: 0;
+  border-bottom: 6px solid transparent;
+  border-right: 6px solid black;
+  border-top: 6px solid transparent;
+  content: "";
+  right: 0.625rem;
+  top: 0.75rem;
+}
+
+/* line 198, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.dropdown ul a {
-  height: auto;
-  width: 12.5rem;
+  color: #000000;
+  line-height: 1rem;
 }
 
-/* line 171, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 213, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.dropdown li:hover > ul,
 .menu.dropdown li.focus > ul {
-  left: auto;
+  display: block;
 }
 
-/* line 177, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 219, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu.dropdown li {
   float: left;
   position: relative;
 }
 
-/* line 188, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 230, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .menu a {
   color: #ffffff;
   display: block;
@@ -988,7 +1051,7 @@ a:hover, a:focus, a:active {
   display: table;
 }
 
-/* line 206, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 248, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .comment-navigation .nav-previous,
 .posts-navigation .nav-previous,
 .post-navigation .nav-previous {
@@ -997,7 +1060,7 @@ a:hover, a:focus, a:active {
   float: left;
 }
 
-/* line 212, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 254, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .comment-navigation .nav-next,
 .posts-navigation .nav-next,
 .post-navigation .nav-next {
@@ -1007,7 +1070,7 @@ a:hover, a:focus, a:active {
   text-align: right;
 }
 
-/* line 218, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
+/* line 260, /Applications/MAMP/htdocs/photography/wp-content/themes/simplephotoblog/assets/sass/modules/_navigation.scss */
 .comment-navigation .nav-next img,
 .posts-navigation .nav-next img,
 .post-navigation .nav-next img {
